# RenderStudioKit

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  NOTICE  README.md  build.sh  run.sh
CMake/: macros.cmake
CMake/macros/: macros.cmake  msvc.cmake
CMake/modules/: FindBinaryOpenSSL.cmake  FindHoudiniUSD.cmake  FindMayaUsd.cmake  FindUSD.cmake  FindUSDMonolithic.cmake
CMake/templates/: Config.cmake.in  INSTALL.vcxproj.user.in
Docs/: LicenseHeader.txt
Examples/: run.sh  workspace.py
Resources/: studio.conf
Sources/: Asset.cpp  Asset.h  CMakeLists.txt  Config.cmake.in  Context.cpp  Context.h  Data.cpp  Data.h  FileFormat.cpp  FileFormat.h  Kit.cpp  Kit.h  Notice.cpp  Notice.h  Registry.cpp  Registry.h  Resolver.cpp  Resolver.h
Sources/Bindings/: BoostIncludeWrapper.h  CMakeLists.txt  __init__.py  module.cpp  moduleDeps.cpp  wrapRenderStudioKit.cpp  wrapRenderStudioNotice.cpp  wrapWebUsdAssetResolver.cpp
Sources/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Sources/Networking/: CMakeLists.txt  Certificates.cpp  Certificates.h  LocalStorageApi.cpp  LocalStorageApi.h  MaterialLibraryApi.cpp  MaterialLibraryApi.h  RestClient.cpp  RestClient.h  Syncthing.cpp  Syncthing.h  Url.cpp  Url.h  WebsocketClient.cpp  WebsocketClient.h  WebsocketServer.cpp  WebsocketServer.h  Workspace.cpp  Workspace.h
Sources/Notice/: CMakeLists.txt  Notice.cpp  Notice.h
Sources/Plugin/: plugInfo.json
Sources/Resolver/: Asset.cpp  Asset.h  CMakeLists.txt  Data.cpp  Data.h  FileFormat.cpp  FileFormat.h  Registry.cpp  Registry.h  Resolver.cpp  Resolver.h  plugInfo.json
Sources/Schema/: AiTools.cpp  AiTools.h  CMakeLists.txt  api.h  generatedSchema.usda  plugInfo.json  renderStudioAiPrimAPI.cpp  renderStudioAiPrimAPI.h  schema.usda  tokens.cpp  tokens.h  wrapRenderStudioAiPrimAPI.cpp  wrapTokens.cpp
Sources/Serialization/: Api.cpp  Api.h  CMakeLists.txt  Serialization.cpp  Serialization.h
Sources/Server/: CMakeLists.txt  Channel.cpp  Channel.h  Logic.cpp  Logic.h  Main.cpp  Run.bat  Run.sh  Server.cpp
Sources/Utils/: BackgroundTask.cpp  BackgroundTask.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  ProcessUtils.cpp  ProcessUtils.h  Uuid.cpp  Uuid.h
Tools/: Dockerfile.Builder  Dockerfile.Tester  Makefile
Watchdog/: requirements.txt  watchdog.py  watchdog.spec
Watchdog/app/: connection_manager.py  logger.py  logic.py  main.py  settings.py  syncthing_manager.py
Workspace/: RenderStudioWorkspace.py  requirements.txt
Workspace/app/: connection_manager.py  logger.py  main.py  settings.py  syncthing_manager.py  terminator.py
